--- a/navbar.html
+++ b/navbar.html
@@ -4,24 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="navbar.css">
     <title>Navbar</title>
 </head>
 <body>
+    
+
     <div class="container">
-        <div class="image">
-            <img src="/logo.svg" width="80px">
-        </div>
-        <div>
-            <nav>
-                <a href="#" class="nav-enlace">DESCRIPTION</a>
-                <a href="#" class="nav-enlace">FEATURES</a>
-                <a href="#" class="nav-enlace">SCREENS</a>
-                <a href="#" class="nav-enlace">EXTRA</a>
-                <a href="#" class="nav-enlace">DOWNLOAD</a>
-            </nav>
+        <div class="row">
+            <div class="col-12">
+                <div  class="row container-nav">
+                    <div class="col-2 image">
+                        <img src="/logo.svg" width="80px">
+                    </div>
+                    <div class="col-10">
+                        <nav>
+                            <a href="#" class="nav-enlace">DESCRIPTION</a>
+                            <a href="#" class="nav-enlace">FEATURES</a>
+                            <a href="#" class="nav-enlace">SCREENS</a>
+                            <a href="#" class="nav-enlace">EXTRA</a>
+                            <a href="#" class="nav-enlace">DOWNLOAD</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                MAIN
+            </div>
+            <div class="col-12">
+                FOOTER
+            </div>            
         </div>
     </div>
 </body>
 </html>
+
 
