--- a/second-page.html
+++ b/second-page.html
@@ -8,53 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Sync</title>
 </head>
-<header class="header">
-    <nav class="navbar navbar-style">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#micon">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href=""><img class="logo" src="assets/icons.img/logo.svg"></a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="">Home</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Contact Us</a></li>
-            </ul>
-        </div>
-    </nav>
+<header>
 </header>
 <body>
     <div class="container">
         <div class="row">
             <div class="col-sm-6 banner-image">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="assets/fotos.jpg/screenshot-2.jpg" class="img-responsive">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/assets/icons.img/logo.svg" class="img-responsive">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-                <img src="assets/fotos.jpg/screenshot-2.jpg" class="img-responsive">
-                <a class="btn btn-first" href="#">Lightbox</a>
+                <img src="/assets/fotos.jpg/page-two.png" class="img-responsive"> 
             </div>
-            <div class="col-sm-6 banner-info" class="responsive">
+            <div class="col-sm-6 banner-info">
                 <h1>Organize Your Time And Start Getting Results</h1>
                 <p>
                     Sync is the first moblie app on the market to harness
@@ -66,6 +28,7 @@
                         <li> <a href=""> See the improved results in no more than a coupñe of weeks</a></li>
                     </ul>
                 </p>
+                <a class="btn" href="#">Lightbox</a>
              </div>
         </div>
     </div>
