--- a/second-page.html
+++ b/second-page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/App-css/second-page.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Sync</title>
 </head>
 <header>
@@ -27,10 +27,12 @@
                         <li> <a href=""> Begin monitoring your day to day routine with Sync app</a></li>
                         <li> <a href=""> See the improved results in no more than a coupñe of weeks</a></li>
                     </ul>
+                    <a class="btn" href="#">Lightbox</a>
                 </p>
-                <a class="btn" href="#">Lightbox</a>
              </div>
         </div>
     </div>
 </body>
-</html>
+</html>    
+   
+                    
