--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="navbar.css">
-    <title>Navbar</title>
+    <title>Sync App</title>
 </head>
 <body>
     
@@ -17,14 +17,14 @@
                 <div  class="row container-nav" class="container-fluid">
                         <nav class="navbar me-auto navbar-expand-md">
                             <a href="#" class="navbar-brand"><img src="logo.svg" width="90px"></a>
-                            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacion">
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="#menu-navegacion">
+                              </button>
+                              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="ms-auto navbar-nav">
-                                    <li class="nav-item"><a class="nav-link" href="#">DESCRIPTION</a></li>                                
-                                    <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#">SCREENS</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#"><strong>DESCRIPTION</strong></a></li>                                
+                                    <li class="nav-item"><a class="nav-link" href="#"><strong>FEATURES</strong></a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#"><strong>SCREENS</strong></a></li>
                                     <li class="dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" id="dropdownMenuLink" aria-expanded="false">
                                             EXTRA
@@ -36,7 +36,7 @@
                                         </ul>
                                         
                                     </li>
-                                    <li class="nav-item"><a class="nav-link" href="#">DOWNLOAD</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="https://www.factoriaf5.org">DOWNLOAD</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -69,10 +69,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
 
