--- a/navbar.html
+++ b/navbar.html
@@ -6,39 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="navbar.css">
+    <script src="https://kit.fontawesome.com/4a8719bdeb.js" crossorigin="anonymous"></script>
     <title>Sync App</title>
 </head>
 <body>
         <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div  class="row container-nav" class="container-fluid">
-                        <nav class="navbar me-auto navbar-expand-md">
-                            <a href="#" class="navbar-brand"><img src="logo.svg" width="90px"></a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                              </button>
-                              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="ms-auto navbar-nav">
-                                    <li class="nav-item"><a class="nav-link" href="#"><strong>DESCRIPTION</strong></a></li>                                
-                                    <li class="nav-item"><a class="nav-link" href="#"><strong>FEATURES</strong></a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#"><strong>SCREENS</strong></a></li>
-                                    <li class="dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" id="dropdownMenuLink" aria-expanded="false">
-                                            EXTRA
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="#">ARTICLE DETAILS</a></li>
-                                            <li><a class="dropdown-item" href="#">TERMS CONDITIONS</a></li>
-                                            <li><a class="dropdown-item" href="#">PRIVACY POLICY</a></li>
-                                        </ul>    
-                                    </li>
-                                    <li class="nav-item"><a class="nav-link" href="https://www.factoriaf5.org">DOWNLOAD</a></li>
-                             </div>
+            <div class="row sticky-top">
+                <div class="col-12">
+                    <div class="row container-nav">
+                        <nav class="navbar sticky-top navbar-expand-md" id="myNavbar">
+                                <div class="container-fluid">
+                                    <a href="index.html" class="navbar-brand"><img src="logo.svg" width="90px">
+                                    </a>
+                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                            <ul class="navbar-nav ms-auto">
+                                            <li class="nav-item"><a class="nav-link" href=".view/second-page.html"><strong>DESCRIPTION</strong></a></li>                                
+                                            <li class="nav-item"><a class="nav-link" href="./view/part-3.html"><strong>FEATURES</strong></a></li>
+                                            <li class="nav-item"><a class="nav-link" href="./view/parte-4.html"><strong>SCREENS</strong></a></li>
+                                            <li class="dropdown">
+                                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" id="dropdownMenuLink" aria-expanded="false">
+                                                    EXTRA
+                                                </a>
+                                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                    <li><a class="dropdown-item" href="#">ARTICLE DETAILS</a></li>
+                                                    <li><a class="dropdown-item" href="#">TERMS CONDITIONS</a></li>
+                                                    <li><a class="dropdown-item" href="#">PRIVACY POLICY</a></li>
+                                                </ul>    
+                                            </li>
+                                            <li class="nav-item"><a class="nav-link download" href="https://www.factoriaf5.org">DOWNLOAD</a></li>
+                                    </div>
+                                </div>
                         </nav>
                     </div>
-                </div>
-            </div>
+             </div>
+        </div>
             <div class="col-12">
                 <div class="botones-arriba">
                     <div class="heartbeat">
@@ -54,11 +58,75 @@
                     <div class="blink-1">
                         <img src="decorative-blue-circle.svg" width="80px"><br>
                     </div>
-                    <div class="swirl-in-fwd" width="100px">
-                    <img src="header-iphone.png" width="500px" class="mobile-picture">
+                    <div class="boton-descarga">
+                        <a href="https://www.factoriaf5.org"class="boton"><i class="fa-brands fa-apple"></i> DOWNLOAD</a>
+                        <a href="https://www.factoriaf5.org"class="boton"><i class="fa-solid fa-play"></i> DOWNLOAD</a>
+                    </div>
+                    <div class="contenedor-movil">
+                        <div class="swirl-in-fwd" width="100px">
+                            <img src="header-iphone.png" width="500px" class="mobile-picture">
+                        </div>
+                    </div>
+                </div><br><br>
+            </div>
+            <section class="logos-container mx-auto">
+                <div class="d-flex row-align-items mx-auto">
+                    <div class="logos">    
+                        <span class="col-sm-6">   
+                            <div>
+                                <div class="circulo-logo mx-auto">
+                                <i class="fa-solid fa-users fa-2x"></i>
+                                </div>
+                            </div>
+                                <p class="texto">Identify Goals
+                                </p>
+                        </span> 
+                 </div>
+                    <div class="logos">      
+                        <span class="col-sm-6">
+                            <div>
+                                <div class="circulo-logo2 mx-auto">
+                                    <i class="fa-solid fa-code fa-2x"></i>
+                                </div>
+                            </div>
+                                <p class="texto">Situation Analysis
+                                </p>
+                        </span> 
+                    </div>
+                    <div class="logos"> 
+                        <span class="col-sm-6">      
+                        <div>
+                            <div class="circulo-logo3 mx-auto">
+                                <i class="fa-solid fa-gear fa-2x"></i>
+                            </div>
+                        </div>
+                            <p class="texto">Settings
+                            </p>
+                        </span>
+                </div>
+                <div class="logos">  
+                    <span class="col-sm-6">      
+                    <div>
+                        <div class="circulo-logo4 mx-auto">
+                            <i class="fa-solid fa-comments fa-2x"></i>
+                        </div>
+                    </div>
+                        <p class="texto">Social Interaction
+                        </p>
+                    </span>
+            </div>
+            <div class="logos">   
+                <span class="col-sm-6">     
+                <div>
+                    <div class="circulo-logo5 mx-auto">
+                        <i class="fa-solid fa-rocket fa-2x"></i>
                     </div>
                 </div>
-            </div>
+                    <p class="texto">Get Things Done
+                    </p>
+                </span>
+        </div>
+    </div>
             <div class="col-12">
                 FOOTER
             </div>            
