--- a/Desktop/BootcampGijon/HTML5-Reproducir/index.html
+++ b/Desktop/BootcampGijon/HTML5-Reproducir/index.html
@@ -12,7 +12,7 @@
   <div class="contianer-top">
     <div class="html">HTML 5</div>
     <div class="img-text1">
-      <img class="logoHtml" src="imagenes/html5.png" alt="Logo HTML5">
+      <img class="logoHtml" src="html5.png" alt="Logo HTML5">
       <p class="textHtml">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus omnis voluptatum dolores at vero quibusdam, excepturi repellendus molestiae corporis pariatur consectetur, 
       magnam fugiat. Optio ipsa sint velit impedit delectus numquam dicta eos maxime. Ratione doloribus explicabo possimus porro voluptates nihil? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus omnis voluptatum dolores at vero quibusdam, excepturi repellendus molestiae corporis pariatur consectetur, 
       magnam fugiat. Optio ipsa sint velit impedit delectus numquam dicta eos maxime. Ratione doloribus explicabo possimus porro voluptates nihil?</p>
@@ -21,7 +21,7 @@
   <div class="contianer-bottom">
     <div class="css">CSS 3</div>
     <div class="img-text2">
-      <img class="logoCss" src="imagenes/css3.png" alt="Logo CSS3">
+      <img class="logoCss" src="css3.png" alt="Logo CSS3">
       <p class="textCss">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus omnis voluptatum dolores at vero quibusdam, excepturi repellendus molestiae corporis pariatur consectetur, 
       magnam fugiat. Optio ipsa sint velit impedit delectus numquam dicta eos maxime. Ratione doloribus explicabo possimus porro voluptates nihil?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus omnis voluptatum dolores at vero quibusdam, excepturi repellendus molestiae corporis pariatur consectetur, 
       magnam fugiat. Optio ipsa sint velit impedit delectus numquam dicta eos maxime. Ratione doloribus explicabo possimus porro voluptates nihil?</p>
